add SI figures, minor updates to main text

--- a/notebooks/FBA_metabolic_modes.ipynb
+++ b/notebooks/FBA_metabolic_modes.ipynb
@@ -942,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 129,
    "metadata": {},
    "outputs": [
     {
@@ -990,6 +990,7 @@
     "core_model.solver = 'glpk'\n",
     "core_model.compartments = {'c': 'Internal_Species', 'e': 'External_Species'}\n",
     "\n",
+    "# Set the ATP maintenance to non-zero\n",
     "core_model.reactions.ATPM.lower_bound = 5\n",
     "\n",
     "# Add a serine exchange\n",
@@ -1004,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
@@ -1025,6 +1026,8 @@
        " 'EX_cu2_ex': 1000.0,\n",
        " 'EX_fe2_ex': 1000.0,\n",
        " 'EX_fe3_ex': 1000.0,\n",
+       " 'EX_glc_DASH_D_ex': 0,\n",
+       " 'EX_glyc_ex': 0,\n",
        " 'EX_h_ex': 1000.0,\n",
        " 'EX_h2o_ex': 1000.0,\n",
        " 'EX_k_ex': 1000.0,\n",
@@ -1036,23 +1039,21 @@
        " 'EX_o2_ex': 0,\n",
        " 'EX_pi_ex': 1000.0,\n",
        " 'EX_so4_ex': 1000.0,\n",
+       " 'EX_succ_ex': 0,\n",
        " 'EX_zn2_ex': 1000.0,\n",
+       " 'EX_ac_ex': 0,\n",
        " 'EX_etoh_ex': 1000.0,\n",
        " 'EX_for_ex': 1000.0,\n",
        " 'EX_h2_ex': 1000.0,\n",
-       " 'EX_lac_ex': 10,\n",
+       " 'EX_lac_ex': 1000.0,\n",
        " 'EX_4CRSOL_ex': 1000.0,\n",
        " 'EX_5DRIB_ex': 1000.0,\n",
        " 'EX_AMOB_ex': 1000.0,\n",
        " 'EX_MTHTHF_ex': 1000.0,\n",
-       " 'EX_meoh_ex': 1000.0,\n",
-       " 'EX_glc_DASH_D_ex': 0,\n",
-       " 'EX_glyc_ex': 0,\n",
-       " 'EX_ac_ex': 0,\n",
-       " 'EX_succ_ex': 0}"
+       " 'EX_meoh_ex': 1000.0}"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1076,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1089,8 +1090,12 @@
       "Could not identify an external compartment by name and choosing one with the most boundary reactions. That might be complete nonsense or change suddenly. Consider renaming your compartments using `Model.compartments` to fix this.\n",
       "Could not identify an external compartment by name and choosing one with the most boundary reactions. That might be complete nonsense or change suddenly. Consider renaming your compartments using `Model.compartments` to fix this.\n",
       "Could not identify an external compartment by name and choosing one with the most boundary reactions. That might be complete nonsense or change suddenly. Consider renaming your compartments using `Model.compartments` to fix this.\n",
+      "/opt/miniconda3/lib/python3.8/site-packages/cobra/util/solver.py:554: UserWarning: Solver status is 'infeasible'.\n",
+      "  warn(f\"Solver status is '{status}'.\", UserWarning)\n",
       "Could not identify an external compartment by name and choosing one with the most boundary reactions. That might be complete nonsense or change suddenly. Consider renaming your compartments using `Model.compartments` to fix this.\n",
-      "Could not identify an external compartment by name and choosing one with the most boundary reactions. That might be complete nonsense or change suddenly. Consider renaming your compartments using `Model.compartments` to fix this.\n"
+      "Could not identify an external compartment by name and choosing one with the most boundary reactions. That might be complete nonsense or change suddenly. Consider renaming your compartments using `Model.compartments` to fix this.\n",
+      "/opt/miniconda3/lib/python3.8/site-packages/cobra/util/solver.py:554: UserWarning: Solver status is 'infeasible'.\n",
+      "  warn(f\"Solver status is '{status}'.\", UserWarning)\n"
      ]
     }
    ],
@@ -1118,91 +1123,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 132,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
        "\n",
-       "        <table>\n",
-       "            <tr>\n",
-       "                <td><strong>Reaction identifier</strong></td><td>ATPM</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Name</strong></td><td>R_ATPM</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Memory address</strong></td>\n",
-       "                <td>0x7f83798099d0</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Stoichiometry</strong></td>\n",
-       "                <td>\n",
-       "                    <p style='text-align:right'>atp_c + h2o_c --> adp_c + h_c + pi_c</p>\n",
-       "                    <p style='text-align:right'>ATP + H2O --> ADP + H+ + Phosphate</p>\n",
-       "                </td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>GPR</strong></td><td></td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Lower bound</strong></td><td>0.0</td>\n",
-       "            </tr><tr>\n",
-       "                <td><strong>Upper bound</strong></td><td>1000.0</td>\n",
-       "            </tr>\n",
-       "        </table>\n",
-       "        "
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>e_acceptor</th>\n",
+       "      <th>c_source</th>\n",
+       "      <th>growth_rate_hr</th>\n",
+       "      <th>maintenance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>EX_o2_ex</td>\n",
+       "      <td>EX_glc_DASH_D_ex</td>\n",
+       "      <td>9.750579e-01</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>fermentation</td>\n",
+       "      <td>EX_glc_DASH_D_ex</td>\n",
+       "      <td>2.691588e-01</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>EX_o2_ex</td>\n",
+       "      <td>EX_glyc_ex</td>\n",
+       "      <td>5.551688e-01</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>fermentation</td>\n",
+       "      <td>EX_glyc_ex</td>\n",
+       "      <td>5.809203e-16</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>EX_o2_ex</td>\n",
+       "      <td>EX_ac_ex</td>\n",
+       "      <td>2.367934e-01</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>fermentation</td>\n",
+       "      <td>EX_ac_ex</td>\n",
+       "      <td>1.368552e-17</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>EX_o2_ex</td>\n",
+       "      <td>EX_succ_ex</td>\n",
+       "      <td>4.847596e-01</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>fermentation</td>\n",
+       "      <td>EX_succ_ex</td>\n",
+       "      <td>2.089400e-16</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
       ],
       "text/plain": [
-       "<Reaction ATPM at 0x7f83798099d0>"
+       "     e_acceptor          c_source  growth_rate_hr  maintenance\n",
+       "0      EX_o2_ex  EX_glc_DASH_D_ex    9.750579e-01          5.0\n",
+       "1  fermentation  EX_glc_DASH_D_ex    2.691588e-01          5.0\n",
+       "2      EX_o2_ex        EX_glyc_ex    5.551688e-01          5.0\n",
+       "3  fermentation        EX_glyc_ex    5.809203e-16          5.0\n",
+       "4      EX_o2_ex          EX_ac_ex    2.367934e-01          5.0\n",
+       "5  fermentation          EX_ac_ex    1.368552e-17          5.0\n",
+       "6      EX_o2_ex        EX_succ_ex    4.847596e-01          5.0\n",
+       "7  fermentation        EX_succ_ex    2.089400e-16          5.0"
       ]
      },
-     "execution_count": 128,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Boundary reaction 'EX_ser_DASH_L_ex' already exists.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/h9/fvnb4xnn63qg71jx6ncvg62w0000gn/T/ipykernel_25408/3589344658.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcore_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_metabolites\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mserine_e\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[0mcore_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_reactions\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mserine_ex\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 7\u001b[0;31m \u001b[0mcore_model\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_boundary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mserine_e\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'exchange'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreaction_id\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'EX_ser_DASH_L_ex'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m/opt/miniconda3/lib/python3.8/site-packages/cobra/core/model.py\u001b[0m in \u001b[0;36madd_boundary\u001b[0;34m(self, metabolite, type, reaction_id, lb, ub, sbo_term)\u001b[0m\n\u001b[1;32m    677\u001b[0m             )\n\u001b[1;32m    678\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mreaction_id\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreactions\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 679\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mValueError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf\"Boundary reaction '{reaction_id}' already exists.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    680\u001b[0m         \u001b[0mname\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34mf\"{metabolite.name} {type}\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    681\u001b[0m         \u001b[0mrxn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mReaction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mid\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mreaction_id\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mname\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlower_bound\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mlb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mupper_bound\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mub\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: Boundary reaction 'EX_ser_DASH_L_ex' already exists."
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'EX_Biomass'"
-      ]
-     },
-     "execution_count": 38,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "core_model.exchanges[0].id"
+    "core_results_df"
    ]
   },
   {
