handle change in pandas

--- a/notebooks/03_CyanoProteomeNOSC.ipynb
+++ b/notebooks/03_CyanoProteomeNOSC.ipynb
@@ -227,17 +227,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'P74732', 'Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6', 'P73734', 'Q6ZEM5:Q6YRW8', 'P74195:P74627:P74059', 'Q6YRS8:P73838', 'Q6YRW7:Q6ZEM6', 'P74303', 'P73009:P74083', 'P73037'}\n",
+      "{'P73009:P74083', 'P73037', 'P74195:P74627:P74059', 'P74303', 'P73734', 'Q6ZEM5:Q6YRW8', 'Q6YRW7:Q6ZEM6', 'Q6YRS8:P73838', 'P74732', 'Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6'}\n",
       "10 not found\n",
       "Adding fictional IDs for those representing a mixture of isoforms\n",
-      "Adding fictional protein for Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6 representing 7 isoforms\n",
-      "Adding fictional protein for Q6ZEM5:Q6YRW8 representing 2 isoforms\n",
-      "Adding fictional protein for P74195:P74627:P74059 representing 3 isoforms\n",
-      "Adding fictional protein for Q6YRS8:P73838 representing 2 isoforms\n",
-      "Adding fictional protein for Q6YRW7:Q6ZEM6 representing 2 isoforms\n",
       "Adding fictional protein for P73009:P74083 representing 2 isoforms\n",
+      "Adding fictional protein for P74195:P74627:P74059 representing 3 isoforms\n",
+      "Adding fictional protein for Q6ZEM5:Q6YRW8 representing 2 isoforms\n",
+      "Adding fictional protein for Q6YRW7:Q6ZEM6 representing 2 isoforms\n",
+      "Adding fictional protein for Q6YRS8:P73838 representing 2 isoforms\n",
+      "Adding fictional protein for Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6 representing 7 isoforms\n",
       "After update, missing 4 IDs\n",
-      "{'P74732', 'P73734', 'P73037', 'P74303'}\n"
+      "{'P73037', 'P74303', 'P73734', 'P74732'}\n"
      ]
     }
    ],
@@ -279,7 +279,7 @@
     "    fake_protein = dict(primary_accession=my_id, NC=NC, Ce=Ce, NOSC=(Ce/NC))\n",
     "    fakes.append(fake_protein)\n",
     "    \n",
-    "extended_nosc_df = nosc_df.append(fakes, ignore_index=True)\n",
+    "extended_nosc_df = pd.concat([nosc_df, pd.DataFrame(fakes)], ignore_index=True)\n",
     "\n",
     "# recheck which IDs are missing\n",
     "cds_ids = set(extended_nosc_df.primary_accession.values.tolist())\n",
@@ -314,7 +314,7 @@
    "source": [
     "# Checking the percentage of unmapped genes. \n",
     "data_cols = ['27.5', '55', '110', '220', '440', '1100']\n",
-    "mapped_sum = raw_abund_df[data_cols].loc[shared_ids].sum()\n",
+    "mapped_sum = raw_abund_df[data_cols].loc[list(shared_ids)].sum()\n",
     "total = raw_abund_df[data_cols].sum()\n",
     "pct_diff = 100*(total - mapped_sum)/total\n",
     "\n",
@@ -579,9 +579,17 @@
        "      <th>spare_media_flow_rate_hr</th>\n",
        "      <th>dry_weight_mg_L</th>\n",
        "      <th>proteome_NOSC</th>\n",
+       "      <th>growth_mode</th>\n",
+       "      <th>dataset</th>\n",
+       "      <th>strain</th>\n",
+       "      <th>condition</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>cond_id</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -597,6 +605,10 @@
        "      <td>0.028</td>\n",
        "      <td>132</td>\n",
        "      <td>-0.132964</td>\n",
+       "      <td>photobioreactor</td>\n",
+       "      <td>zavrel_2019</td>\n",
+       "      <td>PCC6803</td>\n",
+       "      <td>photobioreactor_uE27.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>55</th>\n",
@@ -605,6 +617,10 @@
        "      <td>0.034</td>\n",
        "      <td>166</td>\n",
        "      <td>-0.134464</td>\n",
+       "      <td>photobioreactor</td>\n",
+       "      <td>zavrel_2019</td>\n",
+       "      <td>PCC6803</td>\n",
+       "      <td>photobioreactor_uE55.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>110</th>\n",
@@ -613,6 +629,10 @@
        "      <td>0.048</td>\n",
        "      <td>173</td>\n",
        "      <td>-0.135985</td>\n",
+       "      <td>photobioreactor</td>\n",
+       "      <td>zavrel_2019</td>\n",
+       "      <td>PCC6803</td>\n",
+       "      <td>photobioreactor_uE110.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>220</th>\n",
@@ -621,6 +641,10 @@
        "      <td>0.070</td>\n",
        "      <td>220</td>\n",
        "      <td>-0.136507</td>\n",
+       "      <td>photobioreactor</td>\n",
+       "      <td>zavrel_2019</td>\n",
+       "      <td>PCC6803</td>\n",
+       "      <td>photobioreactor_uE220.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>440</th>\n",
@@ -629,6 +653,10 @@
        "      <td>0.121</td>\n",
        "      <td>221</td>\n",
        "      <td>-0.136293</td>\n",
+       "      <td>photobioreactor</td>\n",
+       "      <td>zavrel_2019</td>\n",
+       "      <td>PCC6803</td>\n",
+       "      <td>photobioreactor_uE440.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>660</th>\n",
@@ -637,6 +665,10 @@
        "      <td>0.118</td>\n",
        "      <td>260</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>photobioreactor</td>\n",
+       "      <td>zavrel_2019</td>\n",
+       "      <td>PCC6803</td>\n",
+       "      <td>photobioreactor_uE660.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>880</th>\n",
@@ -645,6 +677,10 @@
        "      <td>0.089</td>\n",
        "      <td>256</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>photobioreactor</td>\n",
+       "      <td>zavrel_2019</td>\n",
+       "      <td>PCC6803</td>\n",
+       "      <td>photobioreactor_uE880.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1100</th>\n",
@@ -653,6 +689,10 @@
        "      <td>0.086</td>\n",
        "      <td>231</td>\n",
        "      <td>-0.139379</td>\n",
+       "      <td>photobioreactor</td>\n",
+       "      <td>zavrel_2019</td>\n",
+       "      <td>PCC6803</td>\n",
+       "      <td>photobioreactor_uE1100.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -670,16 +710,27 @@
        "880                           880.0           0.990                     0.089   \n",
        "1100                         1100.0           0.930                     0.086   \n",
        "\n",
-       "         dry_weight_mg_L  proteome_NOSC  \n",
-       "cond_id                                  \n",
-       "27.5                 132      -0.132964  \n",
-       "55                   166      -0.134464  \n",
-       "110                  173      -0.135985  \n",
-       "220                  220      -0.136507  \n",
-       "440                  221      -0.136293  \n",
-       "660                  260            NaN  \n",
-       "880                  256            NaN  \n",
-       "1100                 231      -0.139379  "
+       "         dry_weight_mg_L  proteome_NOSC      growth_mode      dataset  \\\n",
+       "cond_id                                                                 \n",
+       "27.5                 132      -0.132964  photobioreactor  zavrel_2019   \n",
+       "55                   166      -0.134464  photobioreactor  zavrel_2019   \n",
+       "110                  173      -0.135985  photobioreactor  zavrel_2019   \n",
+       "220                  220      -0.136507  photobioreactor  zavrel_2019   \n",
+       "440                  221      -0.136293  photobioreactor  zavrel_2019   \n",
+       "660                  260            NaN  photobioreactor  zavrel_2019   \n",
+       "880                  256            NaN  photobioreactor  zavrel_2019   \n",
+       "1100                 231      -0.139379  photobioreactor  zavrel_2019   \n",
+       "\n",
+       "          strain                 condition  \n",
+       "cond_id                                     \n",
+       "27.5     PCC6803    photobioreactor_uE27.5  \n",
+       "55       PCC6803    photobioreactor_uE55.0  \n",
+       "110      PCC6803   photobioreactor_uE110.0  \n",
+       "220      PCC6803   photobioreactor_uE220.0  \n",
+       "440      PCC6803   photobioreactor_uE440.0  \n",
+       "660      PCC6803   photobioreactor_uE660.0  \n",
+       "880      PCC6803   photobioreactor_uE880.0  \n",
+       "1100     PCC6803  photobioreactor_uE1100.0  "
       ]
      },
      "execution_count": 6,
@@ -692,17 +743,23 @@
     "# TODO: save this unit conversion\n",
     "data_cols = ['27.5', '55', '110', '220', '440', '1100']\n",
     "# fg/mol = kg/mol * 1e18 fg/kg\n",
-    "mws_fg_mol = raw_abund_df.loc[shared_ids]['Mol. weight [kDa]'] * 1e18 \n",
+    "shared_ids_list = list(shared_ids)\n",
+    "mws_fg_mol = raw_abund_df.loc[shared_ids_list]['Mol. weight [kDa]'] * 1e18 \n",
     "# copies/ul = 6.02e23 copies/mol * fg/ul / (fg/mol)\n",
-    "copies_per_ul = raw_abund_df[data_cols].loc[shared_ids].multiply(6.02e23/mws_fg_mol, axis=0)\n",
+    "copies_per_ul = raw_abund_df[data_cols].loc[shared_ids_list].multiply(6.02e23/mws_fg_mol, axis=0)\n",
     "\n",
-    "Ces = my_nosc_df.loc[shared_ids].Ce.values\n",
-    "NCs = my_nosc_df.loc[shared_ids].NC.values\n",
+    "Ces = my_nosc_df.loc[shared_ids_list].Ce.values\n",
+    "NCs = my_nosc_df.loc[shared_ids_list].NC.values\n",
     "Ce_total = copies_per_ul.multiply(Ces, axis=0)\n",
     "NC_total = copies_per_ul.multiply(NCs, axis=0)\n",
     "\n",
     "cond_NOSC = Ce_total.sum()/NC_total.sum()\n",
     "conds_df['proteome_NOSC'] = cond_NOSC\n",
+    "conds_df['growth_mode'] = 'photobioreactor'\n",
+    "conds_df['dataset'] = 'zavrel_2019'\n",
+    "conds_df['strain'] = 'PCC6803'\n",
+    "conds_df['condition'] = 'photobioreactor_uE' + conds_df['red_light_intensity_uE_m_s'].astype(str)\n",
+    "\n",
     "conds_df.to_csv('../data/proteomes/Synechocystis/Zavrel_proteome_NOSC.csv')\n",
     "\n",
     "conds_df"
