fixes for newer pandas version

--- a/notebooks/03_CyanoProteomeNOSC.ipynb
+++ b/notebooks/03_CyanoProteomeNOSC.ipynb
@@ -227,15 +227,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'P73009:P74083', 'P73037', 'P74195:P74627:P74059', 'P74303', 'P73734', 'Q6ZEM5:Q6YRW8', 'Q6YRW7:Q6ZEM6', 'Q6YRS8:P73838', 'P74732', 'Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6'}\n",
+      "{'Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6', 'Q6YRW7:Q6ZEM6', 'P73734', 'P74732', 'Q6YRS8:P73838', 'P73037', 'P74303', 'Q6ZEM5:Q6YRW8', 'P73009:P74083', 'P74195:P74627:P74059'}\n",
       "10 not found\n",
       "Adding fictional IDs for those representing a mixture of isoforms\n",
-      "Adding fictional protein for P73009:P74083 representing 2 isoforms\n",
-      "Adding fictional protein for P74195:P74627:P74059 representing 3 isoforms\n",
-      "Adding fictional protein for Q6ZEM5:Q6YRW8 representing 2 isoforms\n",
+      "Adding fictional protein for Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6 representing 7 isoforms\n",
       "Adding fictional protein for Q6YRW7:Q6ZEM6 representing 2 isoforms\n",
       "Adding fictional protein for Q6YRS8:P73838 representing 2 isoforms\n",
-      "Adding fictional protein for Q6ZEL1:Q6ZEQ3:P73620:P72822:Q6ZEP8:Q6ZEL2:Q6ZEK6 representing 7 isoforms\n",
+      "Adding fictional protein for Q6ZEM5:Q6YRW8 representing 2 isoforms\n",
+      "Adding fictional protein for P73009:P74083 representing 2 isoforms\n",
+      "Adding fictional protein for P74195:P74627:P74059 representing 3 isoforms\n",
       "After update, missing 4 IDs\n",
       "{'P73037', 'P74303', 'P73734', 'P74732'}\n"
      ]
