add notes on each figure, output as PDF

--- a/notebooks/Fig1.ipynb
+++ b/notebooks/Fig1.ipynb
@@ -24,6 +24,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code generating Figure 1 \n",
+    "Figure 1 describes \"stylized facts\" about microbial metabolism and growth that motivate the integration of redox and resource allocation models. \n",
+    "\n",
+    "Also generates any supplementary figures that are plausibly attached to Figure 1."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -58,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +175,7 @@
     "    plt.figtext(x, y, label, fontsize=8, weight='bold')\n",
     "\n",
     "plt.tight_layout()\n",
-    "plt.savefig('../output/Fig1.png', facecolor='white', dpi=300)\n",
+    "plt.savefig('../output/Fig1.pdf', facecolor='white', dpi=300)\n",
     "plt.show()"
    ]
   },
