--- a/notebooks/Fig5.ipynb
+++ b/notebooks/Fig5.ipynb
@@ -22,6 +22,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Code generating Figure 5\n",
+    "Figure 5 shows that the additional conservation law required by autotrophy limits maximum autotrophic growth rates. \n",
+    "It's a hybrid figure with an illustration added later in Illustrator. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -705,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
